--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 *{
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
-    background-color: #d2d2d2;
+    background-color: #b6957b;
+}
+
+a{
+    text-decoration: none;
 }
 
 .mobile{
@@ -14,6 +20,78 @@ body{
     width: 400px;
     height: 600px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.content{
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.content input{
+    width: 100%;
+    padding: 12px 0;
+    border-radius: 4px;
+    border: 1px solid gray;
+}
+
+.content input::placeholder{
+    font-size: 14px;
+    color: #3e3f44;
+    padding: 0 16px;
+    opacity: 0.9;
+}
+
+.btn-group{
+    display: flex;
+    margin: 10px 0;
+}
+
+.btn-primary{
+    cursor: pointer;
+    margin-left: auto;
+    background-color: #a78265;
+    color: white;
+    letter-spacing: 0.7px;
+    font-weight: 600;
+    font-size: .875rem;
+    padding: 12px 26px;
+    border-radius: 4px;
+    border: none;
+}
+
+.btn-primary:hover{
+    background-color: rgb(145, 102, 63);
+    transition: 0.25s;
+}
+
+.create{
+    letter-spacing: 0.7px;
+    font-weight: 600;
+    font-size: .875rem;
+    align-self: center;
+    color: #757575;
+}
+
+.form__container{
+    display: flex;
+    flex-direction: column;
+    grid-gap: 0.35rem;
+    overflow: auto;
+    flex: 1 1;
+}
+
+.title__auto{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.title__auto h3{
+    text-transform: uppercase;
+    color: #6e523c;
+    letter-spacing: 0.7px;
+    font-weight: 800;
 }
 
 @media (max-width: 600px) {
